avatar name now appears top left; ladder refresh bug fixed;ladder titles align correctly; ladder avatars enlarged slightly; create-save button doesnt open a new tab

--- a/public/stylesheets/cyber_dojo.css
+++ b/public/stylesheets/cyber_dojo.css
@@ -171,6 +171,7 @@ input[type="radio"]:checked+img
   overflow: auto;
   padding: 0;
   padding-left: 3px;
+  margin-right: 10px;
   margin-left: 40px; /* enough for line-numbers */
   font-family: monospace;
   color: white;
